--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-```html
+html
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Smithings Chat App</title>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Smithings Chat</title>
 </head>
 <body>
   <div id="root"></div>
@@ -12,11 +13,7 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 
-  <!-- Babel (so we can write JSX in browser) -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-  <!-- App script -->
-  <script type="text/babel" src="app.js"></script>
+  <!-- Your App -->
+  <script src="app.js"></script>
 </body>
 </html>
-```
